# Huffman-Encoding-CPP

./: CMakeLists.txt  README.md  plot_timing.py
src/: CMakeLists.txt  huffman.cpp  huffman_helper.cpp  huffman_helper.hpp  minHeap.cpp  minHeap.hpp  min_heap.cpp  min_heap.hpp  timing_charts.cpp  timing_charts.hpp
test/: CMakeLists.txt  test_huffman_helper.cpp  test_min_heap.cpp
